<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="id.syizuril.app.mengenalburungnusantara.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/img_item_photo"
            tools:src="@color/colorAccent"
            android:scaleType="fitXY"/>
        <TextView
            style="@style/TextContent.Black"
            android:textSize="32sp"
            android:id="@+id/tv_item_name"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            tools:text="Nama Burung"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/deskripsi"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_item_deskripsi"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"
            tools:text="INI ADALAH DESKIPSI"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/klasifikasi"
            android:layout_marginBottom="8dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextDesc.Field"
                    android:text="@string/kerajaan"
                    />
                <TextView
                    style="@style/TextDesc.Value"
                    android:id="@+id/tv_item_kerajaan"
                    tools:text="Animalia"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextDesc.Field"
                    android:text="@string/kelas"
                    />
                <TextView
                    style="@style/TextDesc.Value"
                    android:id="@+id/tv_item_kelas"
                    tools:text="Aves"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextDesc.Field"
                    android:text="@string/ordo"
                    />
                <TextView
                    style="@style/TextDesc.Value"
                    android:id="@+id/tv_item_ordo"
                    tools:text="Passerine"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextDesc.Field"
                    android:text="@string/familia"
                    />
                <TextView
                    style="@style/TextDesc.Value"
                    android:id="@+id/tv_item_familia"
                    tools:text="Muscicapidae"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextDesc.Field"
                    android:text="@string/genus"
                    />
                <TextView
                    style="@style/TextDesc.Value"
                    android:id="@+id/tv_item_genus"
                    tools:text="Cocpsyschus"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextDesc.Field"
                    android:text="@string/spesies"
                    />
                <TextView
                    style="@style/TextDesc.Value"
                    android:id="@+id/tv_item_spesies"
                    tools:text="C. Malabaricus"
                    />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>